--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,53 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: "FiraGO";
+  src:
+    url("/fonts/firago-300.woff2") format("woff2"),
+    url("/fonts/firago-300.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "FiraGO";
+  src:
+    url("/fonts/firago-400.woff2") format("woff2"),
+    url("/fonts/firago-400.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "FiraGO";
+  src:
+    url("/fonts/firago-500.woff2") format("woff2"),
+    url("/fonts/firago-500.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "FiraGO";
+  src:
+    url("/fonts/firago-600.woff2") format("woff2"),
+    url("/fonts/firago-600.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@theme {
+  /* Fonts */
+  --font-sans: "FiraGO", system-ui, sans-serif;
+
+  /* Colors */
+  --color-*: initial;
+  --color-white: #ffffff;
+  --color-purple: #8338ec;
+  --color-light-purple: #b588f4;
+  --color-dark-gray: #212529;
+}
