update font paths in index.css and add Fredoka One font

--- a/src/index.css
+++ b/src/index.css
@@ -3,46 +3,46 @@
 @font-face {
   font-family: "FiraGO";
   src:
-    url("/fonts/firago-300.woff2") format("woff2"),
-    url("/fonts/firago-300.woff") format("woff");
+    url("/fonts/firago/firago-300.woff2") format("woff2"),
+    url("/fonts/firago/firago-300.woff") format("woff");
   font-weight: 300;
-  font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
   font-family: "FiraGO";
   src:
-    url("/fonts/firago-400.woff2") format("woff2"),
-    url("/fonts/firago-400.woff") format("woff");
+    url("/fonts/firago/firago-400.woff2") format("woff2"),
+    url("/fonts/firago/firago-400.woff") format("woff");
   font-weight: 400;
-  font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
   font-family: "FiraGO";
   src:
-    url("/fonts/firago-500.woff2") format("woff2"),
-    url("/fonts/firago-500.woff") format("woff");
+    url("/fonts/firago/firago-500.woff2") format("woff2"),
+    url("/fonts/firago/firago-500.woff") format("woff");
   font-weight: 500;
-  font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
   font-family: "FiraGO";
   src:
-    url("/fonts/firago-600.woff2") format("woff2"),
-    url("/fonts/firago-600.woff") format("woff");
+    url("/fonts/firago/firago-600.woff2") format("woff2"),
+    url("/fonts/firago/firago-600.woff") format("woff");
   font-weight: 600;
-  font-style: normal;
-  font-display: swap;
+}
+
+@font-face {
+  font-family: "Fredoka One";
+  src:
+    url("/fonts/fredoka-one/fredoka-one.woff2") format("woff2"),
+    url("/fonts/fredoka-one/fredoka-one.woff") format("woff");
 }
 
 @theme {
   /* Fonts */
   --font-sans: "FiraGO", system-ui, sans-serif;
+  --font-fredoka-one: "Fredoka One", system-ui, sans-serif;
 
   /* Colors */
   --color-*: initial;
@@ -50,4 +50,11 @@
   --color-purple: #8338ec;
   --color-light-purple: #b588f4;
   --color-dark-gray: #212529;
+  --color-gray: #343a40;
+  --color-light-gray: #dee2e6;
+  --color-yellow: #f7bc30;
+  --color-orange: #fb5607;
+  --color-pink: #ff006e;
+  --color-light-pink: #ff66a8;
+  --color-blue: #3a86ff;
 }
