--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@
 .task-card {
   transition: all 0.15s ease;
   box-shadow: 0px 0px 0px 0px transparent;
+  border: 1px solid var(--status-color);
 }
 
 .task-card:hover {
