--- a/src/index.css
+++ b/src/index.css
@@ -55,8 +55,10 @@
   --color-gray: #343a40;
   --color-light-gray: #6c757d;
   --color-very-light-gray: #dee2e6;
+  --color-green: #08a508;
   --color-yellow: #f7bc30;
   --color-orange: #fb5607;
+  --color-red: #fa4d4d;
   --color-pink: #ff006e;
   --color-light-pink: #ff66a8;
   --color-blue: #3a86ff;
